--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "has-value": "^2.0.2"
   }
 }
